SERVER-14056 Cross-DB renameCollection needs to call commitIfNeeded

Fixes regression introduced in 0abf27ae.

Before 0abf27a, renameCollection used a DBDirectClient to read objects
from the source namespace.  The call to DBClientCursor::next() would
issue a getmore after finishing each batch, which would reach a commit
point (in DBDirectClient::call()).  The port to the new collection
interface removed the use of DBDirectClient, which removed
renameCollection's commit point.

(cherry picked from commit b27a764852873f5ecdc2dde6fffc317383c032c2)

Conflicts:
    src/mongo/db/commands/rename_collection.cpp