src/mongo/db/commands/rename_collection.cpp
@@ -258,6 +258,7 @@ namespace mongo {
                         errmsg = s.toString();
                         break;
                     }
+                    getDur().commitIfNeeded();
                 }
             }
 
